fix: add overflow content scroll in stories page

--- a/assets/css/stories.css
+++ b/assets/css/stories.css
@@ -1,51 +1,49 @@
-body{
-    background-color: white;
+body {
+  background-color: white;
 }
-.flip-card {
-    background-color: transparent;
-    width: 350px;
-    height: 350px;
-    border: transparent;
-    perspective: 1000px; 
-  }
-  
-  
-  .flip-card-inner {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    text-align: center;
-    transition: transform 0.8s;
-    transform-style: preserve-3d;
-  }
-  
- 
-  .flip-card:hover .flip-card-inner {
-    transform: rotateY(180deg);
-  }
-  
-  .flip-card-front, .flip-card-back {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    -webkit-backface-visibility: hidden; 
-    backface-visibility: hidden;
-    overflow-y: scroll;
-  }
-    ::-webkit-scrollbar {
-      display: none;
-    }
-  
-  .flip-card-front {
-    background-color: transparent;
-    color: rgb(32,136,218);
-    size: 60px;
-  }
 
-  .flip-card-back {
-    background-color: transparent;
-    color: rgb(32,136,218);
-    padding: 5px;
-    transform: rotateY(180deg);
-    
-  }
+.flip-card {
+  background-color: transparent;
+  width: 350px;
+  height: 350px;
+  border: transparent;
+  perspective: 1000px;
+}
+
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 0.8s;
+  transform-style: preserve-3d;
+}
+
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front,
+.flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  overflow:auto;
+}
+.flip-card-front {
+  background-color: transparent;
+  color: rgb(32, 136, 218);
+  size: 60px;
+}
+
+.flip-card-back {
+  background-color: transparent;
+  color: rgb(32, 136, 218);
+  padding: 5px;
+  transform: rotateY(180deg);
+
+}
